headers/RadarKit/RKTest.h

typedef uint8_t RKTestFlag;
typedef uint8_t RKTestSIMDFlag;
void RKTestTemperatureToStatus(void);
void RKTestGetCountry(void);
void RKTestBufferOverviewText(const char *);
void RKTestHealthOverviewText(const char *);
void RKTestReviseLogicalValues(void);
void RKTestPreparePath(void);
void RKTestReadBareRKComplex(const char *);
void RKTestSweepRead(const char *);
void RKTestProductRead(const char *);
void RKTestProductWrite(void);
void RKTestFileMonitor(void);
void RKTestHostMonitor(void);
void RKTestInitializingRadar(void);
void RKTestWebSocket(void);
void RKTestRadarHub(void);
void RKTestSimplePulseEngine(const int);
void RKTestSimpleMomentEngine(const int);
void RKTestSIMD(const RKTestSIMDFlag, const int);
void RKTestWindow(const int);
void RKTestHilbertTransform(void);
void RKTestWriteFFTWisdom(const int);
void RKTestRingFilterShowCoefficients(void);
void RKTestRamp(void);
void RKTestMakeHops(void);
void RKTestWaveformTFM(void);
void RKTestWaveformWrite(void);
void RKTestWaveformDownsampling(void);
void RKTestWaveformShowProperties(void);
void RKTestWaveformShowUserWaveformProperties(const char *filename);
void RKTestPulseCompression(RKTestFlag);
void RKTestOnePulse(void);
void RKTestOneRay(int method(RKMomentScratch *, RKPulse **, const uint16_t), const int);
void RKTestOneRaySpectra(int method(RKMomentScratch *, RKPulse **, const uint16_t), const int lag);
// Performance Tests

void RKTestPulseCompressionSpeed(const int);
void RKTestPulseEngineSpeed(const int);
void RKTestMomentProcessorSpeed(void);
void RKTestCacheWrite(void);
// Transceiver Emulator

RKTransceiver RKTestTransceiverInit(RKRadar *, void *);
int RKTestTransceiverExec(RKTransceiver, const char *, char *);
int RKTestTransceiverFree(RKTransceiver);
// Pedestal Emulator

RKPedestal RKTestPedestalInit(RKRadar *, void *);
int RKTestPedestalExec(RKPedestal, const char *, char *);
int RKTestPedestalFree(RKPedestal);
// Health Relay Emulator

RKHealthRelay RKTestHealthRelayInit(RKRadar *, void *);