python/radarkit/_ctypes_.py


# headers/RadarKit/RKTest.h: 123
if _libs["radarkit"].has("RKTestFileMonitor", "cdecl"):
    RKTestFileMonitor = _libs["radarkit"].get("RKTestFileMonitor", "cdecl")
    RKTestFileMonitor.argtypes = []
    RKTestFileMonitor.restype = None

# headers/RadarKit/RKTest.h: 124
if _libs["radarkit"].has("RKTestHostMonitor", "cdecl"):
    RKTestHostMonitor = _libs["radarkit"].get("RKTestHostMonitor", "cdecl")
    RKTestHostMonitor.argtypes = []
    RKTestHostMonitor.restype = None

# headers/RadarKit/RKTest.h: 125
if _libs["radarkit"].has("RKTestInitializingRadar", "cdecl"):
    RKTestInitializingRadar = _libs["radarkit"].get("RKTestInitializingRadar", "cdecl")
    RKTestInitializingRadar.argtypes = []
    RKTestInitializingRadar.restype = None

# headers/RadarKit/RKTest.h: 126
if _libs["radarkit"].has("RKTestTemperatureToStatus", "cdecl"):
    RKTestTemperatureToStatus = _libs["radarkit"].get("RKTestTemperatureToStatus", "cdecl")
    RKTestTemperatureToStatus.argtypes = []
    RKTestTemperatureToStatus.restype = None

# headers/RadarKit/RKTest.h: 127
if _libs["radarkit"].has("RKTestGetCountry", "cdecl"):
    RKTestGetCountry = _libs["radarkit"].get("RKTestGetCountry", "cdecl")
    RKTestGetCountry.argtypes = []
    RKTestGetCountry.restype = None

# headers/RadarKit/RKTest.h: 128
if _libs["radarkit"].has("RKTestBufferOverviewText", "cdecl"):
    RKTestBufferOverviewText = _libs["radarkit"].get("RKTestBufferOverviewText", "cdecl")
    RKTestBufferOverviewText.argtypes = [String]
    RKTestBufferOverviewText.restype = None

# headers/RadarKit/RKTest.h: 129
if _libs["radarkit"].has("RKTestHealthOverviewText", "cdecl"):
    RKTestHealthOverviewText = _libs["radarkit"].get("RKTestHealthOverviewText", "cdecl")
    RKTestHealthOverviewText.argtypes = [String]
    RKTestHealthOverviewText.restype = None

# headers/RadarKit/RKTest.h: 130
if _libs["radarkit"].has("RKTestSweepRead", "cdecl"):
    RKTestSweepRead = _libs["radarkit"].get("RKTestSweepRead", "cdecl")
    RKTestSweepRead.argtypes = [String]
    RKTestSweepRead.restype = None

# headers/RadarKit/RKTest.h: 131
if _libs["radarkit"].has("RKTestProductRead", "cdecl"):
    RKTestProductRead = _libs["radarkit"].get("RKTestProductRead", "cdecl")
    RKTestProductRead.argtypes = [String]
    RKTestProductRead.restype = None

# headers/RadarKit/RKTest.h: 132
if _libs["radarkit"].has("RKTestProductWrite", "cdecl"):
    RKTestProductWrite = _libs["radarkit"].get("RKTestProductWrite", "cdecl")
    RKTestProductWrite.argtypes = []
    RKTestProductWrite.restype = None

# headers/RadarKit/RKTest.h: 133
if _libs["radarkit"].has("RKTestReviseLogicalValues", "cdecl"):
    RKTestReviseLogicalValues = _libs["radarkit"].get("RKTestReviseLogicalValues", "cdecl")
    RKTestReviseLogicalValues.argtypes = []
    RKTestReviseLogicalValues.restype = None

# headers/RadarKit/RKTest.h: 134
if _libs["radarkit"].has("RKTestReadIQ", "cdecl"):
    RKTestReadIQ = _libs["radarkit"].get("RKTestReadIQ", "cdecl")
    RKTestReadIQ.argtypes = [String]
    RKTestReadIQ.restype = None

# headers/RadarKit/RKTest.h: 135
if _libs["radarkit"].has("RKTestPreparePath", "cdecl"):
    RKTestPreparePath = _libs["radarkit"].get("RKTestPreparePath", "cdecl")
    RKTestPreparePath.argtypes = []
    RKTestPreparePath.restype = None

# headers/RadarKit/RKTest.h: 136
if _libs["radarkit"].has("RKTestWebSocket", "cdecl"):
    RKTestWebSocket = _libs["radarkit"].get("RKTestWebSocket", "cdecl")
    RKTestWebSocket.argtypes = []
    RKTestWebSocket.restype = None

# headers/RadarKit/RKTest.h: 137
if _libs["radarkit"].has("RKTestReadBareRKComplex", "cdecl"):
    RKTestReadBareRKComplex = _libs["radarkit"].get("RKTestReadBareRKComplex", "cdecl")
    RKTestReadBareRKComplex.argtypes = [String]
    RKTestReadBareRKComplex.restype = None

# headers/RadarKit/RKTest.h: 138
if _libs["radarkit"].has("RKTestRadarHub", "cdecl"):
    RKTestRadarHub = _libs["radarkit"].get("RKTestRadarHub", "cdecl")
    RKTestRadarHub.argtypes = []
    RKTestRadarHub.restype = None

# headers/RadarKit/RKTest.h: 139
if _libs["radarkit"].has("RKTestSimplePulseEngine", "cdecl"):
    RKTestSimplePulseEngine = _libs["radarkit"].get("RKTestSimplePulseEngine", "cdecl")
    RKTestSimplePulseEngine.argtypes = [RKPulseStatus]
    RKTestSimplePulseEngine.restype = None

# headers/RadarKit/RKTest.h: 140
if _libs["radarkit"].has("RKTestSimpleMomentEngine", "cdecl"):
    RKTestSimpleMomentEngine = _libs["radarkit"].get("RKTestSimpleMomentEngine", "cdecl")
    RKTestSimpleMomentEngine.argtypes = [c_int]
    RKTestSimpleMomentEngine.restype = None

# headers/RadarKit/RKTest.h: 144
if _libs["radarkit"].has("RKTestSIMD", "cdecl"):
    RKTestSIMD = _libs["radarkit"].get("RKTestSIMD", "cdecl")
    RKTestSIMD.argtypes = [RKTestSIMDFlag, c_int]
    RKTestSIMD.restype = None

# headers/RadarKit/RKTest.h: 145
if _libs["radarkit"].has("RKTestWindow", "cdecl"):
    RKTestWindow = _libs["radarkit"].get("RKTestWindow", "cdecl")
    RKTestWindow.argtypes = []
    RKTestWindow.restype = None

# headers/RadarKit/RKTest.h: 146
if _libs["radarkit"].has("RKTestHilbertTransform", "cdecl"):
    RKTestHilbertTransform = _libs["radarkit"].get("RKTestHilbertTransform", "cdecl")
    RKTestHilbertTransform.argtypes = []
    RKTestHilbertTransform.restype = None

# headers/RadarKit/RKTest.h: 147
if _libs["radarkit"].has("RKTestWriteFFTWisdom", "cdecl"):
    RKTestWriteFFTWisdom = _libs["radarkit"].get("RKTestWriteFFTWisdom", "cdecl")
    RKTestWriteFFTWisdom.argtypes = [c_int]
    RKTestWriteFFTWisdom.restype = None

# headers/RadarKit/RKTest.h: 148
if _libs["radarkit"].has("RKTestRingFilterShowCoefficients", "cdecl"):
    RKTestRingFilterShowCoefficients = _libs["radarkit"].get("RKTestRingFilterShowCoefficients", "cdecl")
    RKTestRingFilterShowCoefficients.argtypes = []
    RKTestRingFilterShowCoefficients.restype = None

# headers/RadarKit/RKTest.h: 149
if _libs["radarkit"].has("RKTestRamp", "cdecl"):
    RKTestRamp = _libs["radarkit"].get("RKTestRamp", "cdecl")
    RKTestRamp.argtypes = []
    RKTestRamp.restype = None

# headers/RadarKit/RKTest.h: 153
if _libs["radarkit"].has("RKTestMakeHops", "cdecl"):
    RKTestMakeHops = _libs["radarkit"].get("RKTestMakeHops", "cdecl")
    RKTestMakeHops.argtypes = []
    RKTestMakeHops.restype = None

# headers/RadarKit/RKTest.h: 154
if _libs["radarkit"].has("RKTestWaveformTFM", "cdecl"):
    RKTestWaveformTFM = _libs["radarkit"].get("RKTestWaveformTFM", "cdecl")
    RKTestWaveformTFM.argtypes = []
    RKTestWaveformTFM.restype = None

# headers/RadarKit/RKTest.h: 155
if _libs["radarkit"].has("RKTestWaveformWrite", "cdecl"):
    RKTestWaveformWrite = _libs["radarkit"].get("RKTestWaveformWrite", "cdecl")
    RKTestWaveformWrite.argtypes = []
    RKTestWaveformWrite.restype = None

# headers/RadarKit/RKTest.h: 156
if _libs["radarkit"].has("RKTestWaveformDownsampling", "cdecl"):
    RKTestWaveformDownsampling = _libs["radarkit"].get("RKTestWaveformDownsampling", "cdecl")
    RKTestWaveformDownsampling.argtypes = []
    RKTestWaveformDownsampling.restype = None

# headers/RadarKit/RKTest.h: 157
if _libs["radarkit"].has("RKTestWaveformShowProperties", "cdecl"):
    RKTestWaveformShowProperties = _libs["radarkit"].get("RKTestWaveformShowProperties", "cdecl")
    RKTestWaveformShowProperties.argtypes = []
    RKTestWaveformShowProperties.restype = None

# headers/RadarKit/RKTest.h: 158
if _libs["radarkit"].has("RKTestWaveformShowUserWaveformProperties", "cdecl"):
    RKTestWaveformShowUserWaveformProperties = _libs["radarkit"].get("RKTestWaveformShowUserWaveformProperties", "cdecl")
    RKTestWaveformShowUserWaveformProperties.argtypes = [String]
    RKTestWaveformShowUserWaveformProperties.restype = None

# headers/RadarKit/RKTest.h: 162
if _libs["radarkit"].has("RKTestPulseCompression", "cdecl"):
    RKTestPulseCompression = _libs["radarkit"].get("RKTestPulseCompression", "cdecl")
    RKTestPulseCompression.argtypes = [RKTestFlag]
    RKTestPulseCompression.restype = None

# headers/RadarKit/RKTest.h: 163
if _libs["radarkit"].has("RKTestOnePulse", "cdecl"):
    RKTestOnePulse = _libs["radarkit"].get("RKTestOnePulse", "cdecl")
    RKTestOnePulse.argtypes = []
    RKTestOnePulse.restype = None

# headers/RadarKit/RKTest.h: 164
if _libs["radarkit"].has("RKTestOneRay", "cdecl"):
    RKTestOneRay = _libs["radarkit"].get("RKTestOneRay", "cdecl")
    RKTestOneRay.argtypes = [CFUNCTYPE(UNCHECKED(c_int), POINTER(RKMomentScratch), POINTER(POINTER(RKPulse)), uint16_t), c_int]
    RKTestOneRay.restype = None

# headers/RadarKit/RKTest.h: 165
if _libs["radarkit"].has("RKTestOneRaySpectra", "cdecl"):
    RKTestOneRaySpectra = _libs["radarkit"].get("RKTestOneRaySpectra", "cdecl")
    RKTestOneRaySpectra.argtypes = [CFUNCTYPE(UNCHECKED(c_int), POINTER(RKMomentScratch), POINTER(POINTER(RKPulse)), uint16_t), c_int]
    RKTestOneRaySpectra.restype = None

# headers/RadarKit/RKTest.h: 169
if _libs["radarkit"].has("RKTestPulseCompressionSpeed", "cdecl"):
    RKTestPulseCompressionSpeed = _libs["radarkit"].get("RKTestPulseCompressionSpeed", "cdecl")
    RKTestPulseCompressionSpeed.argtypes = [c_int]
    RKTestPulseCompressionSpeed.restype = None

# headers/RadarKit/RKTest.h: 170
if _libs["radarkit"].has("RKTestPulseEngineSpeed", "cdecl"):
    RKTestPulseEngineSpeed = _libs["radarkit"].get("RKTestPulseEngineSpeed", "cdecl")
    RKTestPulseEngineSpeed.argtypes = [c_int]
    RKTestPulseEngineSpeed.restype = None

# headers/RadarKit/RKTest.h: 171
if _libs["radarkit"].has("RKTestMomentProcessorSpeed", "cdecl"):
    RKTestMomentProcessorSpeed = _libs["radarkit"].get("RKTestMomentProcessorSpeed", "cdecl")
    RKTestMomentProcessorSpeed.argtypes = []
    RKTestMomentProcessorSpeed.restype = None

# headers/RadarKit/RKTest.h: 172
if _libs["radarkit"].has("RKTestCacheWrite", "cdecl"):
    RKTestCacheWrite = _libs["radarkit"].get("RKTestCacheWrite", "cdecl")
    RKTestCacheWrite.argtypes = []
    RKTestCacheWrite.restype = None

# headers/RadarKit/RKTest.h: 176
if _libs["radarkit"].has("RKTestTransceiverInit", "cdecl"):
    RKTestTransceiverInit = _libs["radarkit"].get("RKTestTransceiverInit", "cdecl")
    RKTestTransceiverInit.argtypes = [POINTER(RKRadar), POINTER(None)]
    RKTestTransceiverInit.restype = RKTransceiver

# headers/RadarKit/RKTest.h: 177
if _libs["radarkit"].has("RKTestTransceiverExec", "cdecl"):
    RKTestTransceiverExec = _libs["radarkit"].get("RKTestTransceiverExec", "cdecl")
    RKTestTransceiverExec.argtypes = [RKTransceiver, String, String]
    RKTestTransceiverExec.restype = c_int

# headers/RadarKit/RKTest.h: 178
if _libs["radarkit"].has("RKTestTransceiverFree", "cdecl"):
    RKTestTransceiverFree = _libs["radarkit"].get("RKTestTransceiverFree", "cdecl")
    RKTestTransceiverFree.argtypes = [RKTransceiver]
    RKTestTransceiverFree.restype = c_int

# headers/RadarKit/RKTest.h: 182
if _libs["radarkit"].has("RKTestPedestalInit", "cdecl"):
    RKTestPedestalInit = _libs["radarkit"].get("RKTestPedestalInit", "cdecl")
    RKTestPedestalInit.argtypes = [POINTER(RKRadar), POINTER(None)]
    RKTestPedestalInit.restype = RKPedestal

# headers/RadarKit/RKTest.h: 183
if _libs["radarkit"].has("RKTestPedestalExec", "cdecl"):
    RKTestPedestalExec = _libs["radarkit"].get("RKTestPedestalExec", "cdecl")
    RKTestPedestalExec.argtypes = [RKPedestal, String, String]
    RKTestPedestalExec.restype = c_int

# headers/RadarKit/RKTest.h: 184
if _libs["radarkit"].has("RKTestPedestalFree", "cdecl"):
    RKTestPedestalFree = _libs["radarkit"].get("RKTestPedestalFree", "cdecl")
    RKTestPedestalFree.argtypes = [RKPedestal]
    RKTestPedestalFree.restype = c_int

# headers/RadarKit/RKTest.h: 188
if _libs["radarkit"].has("RKTestHealthRelayInit", "cdecl"):
    RKTestHealthRelayInit = _libs["radarkit"].get("RKTestHealthRelayInit", "cdecl")
    RKTestHealthRelayInit.argtypes = [POINTER(RKRadar), POINTER(None)]
    RKTestHealthRelayInit.restype = RKHealthRelay
